Added Prepare for segue method

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                                     <outlet property="bodyTextLabel" destination="dFW-7o-cbC" id="Dbe-HX-v9J"/>
                                     <outlet property="dateLabel" destination="gXd-EZ-QBm" id="U3G-s4-d3q"/>
                                     <outlet property="titleLabel" destination="fAW-Fj-tyk" id="Yt3-pT-DGO"/>
-                                    <segue destination="qbF-IU-pV7" kind="show" id="LeW-Mh-GzM"/>
+                                    <segue destination="qbF-IU-pV7" kind="show" identifier="ShowEntryDetailSegue" id="LeW-Mh-GzM"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
