--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -23,8 +23,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="kkH-z4-fie">
+                                        <rect key="frame" x="0.0" y="37" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😊"/>
+                                            <segment title="😐"/>
+                                            <segment title="🙁"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="l18-AI-Lty">
-                                        <rect key="frame" x="0.0" y="37" width="374" height="306.5"/>
+                                        <rect key="frame" x="0.0" y="83" width="374" height="260.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZe-Zt-0TU">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -40,7 +48,7 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="A1k-wp-SjO">
-                                                <rect key="frame" x="0.0" y="38.5" width="374" height="268"/>
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="222"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -63,23 +71,24 @@
                     <navigationItem key="navigationItem" title="Create Entry" id="VE9-oY-buU">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="KpM-qa-BEd">
                             <connections>
-                                <action selector="cancelTapped:" destination="BYZ-38-t0r" id="qLP-bx-ODk"/>
+                                <action selector="cancelTapped:" destination="BYZ-38-t0r" id="D6w-47-omy"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="WLT-i6-JtR">
                             <connections>
-                                <action selector="saveTapped:" destination="BYZ-38-t0r" id="4ZN-Av-3QR"/>
+                                <action selector="saveTapped:" destination="BYZ-38-t0r" id="gmB-3k-E8M"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="bodyTextView" destination="A1k-wp-SjO" id="xJQ-ve-ueA"/>
-                        <outlet property="titleTextField" destination="rVO-gs-Wy0" id="nFr-Bx-rTT"/>
+                        <outlet property="bodyTextView" destination="A1k-wp-SjO" id="dzp-Hf-gTP"/>
+                        <outlet property="moodSegmentedControl" destination="kkH-z4-fie" id="mju-2F-14H"/>
+                        <outlet property="titleTextField" destination="rVO-gs-Wy0" id="ug9-0a-DsH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1414.4927536231885" y="137.94642857142856"/>
+            <point key="canvasLocation" x="1535" y="-204"/>
         </scene>
         <!--Journal-->
         <scene sceneID="cAR-gX-igw">
@@ -137,6 +146,7 @@
                                     <outlet property="bodyTextLabel" destination="CDw-NY-rBA" id="bcb-50-74u"/>
                                     <outlet property="dateLabel" destination="3Ic-KO-k2R" id="ysV-gN-tLD"/>
                                     <outlet property="titleLabel" destination="0jN-sm-TfS" id="iSJ-6c-FVu"/>
+                                    <segue destination="alV-gT-KDK" kind="show" identifier="ShowDetailSegue" id="GjE-E5-dg0"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -148,7 +158,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="r88-fB-bjr">
                         <barButtonItem key="rightBarButtonItem" image="plus.square" catalog="system" id="6I4-ZZ-9IB">
                             <connections>
-                                <segue destination="2Su-Wl-LWP" kind="presentation" modalPresentationStyle="fullScreen" id="TtP-df-hdj"/>
+                                <segue destination="2Su-Wl-LWP" kind="presentation" identifier="" modalPresentationStyle="fullScreen" id="TtP-df-hdj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -156,6 +166,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FTj-Uy-mOe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-228.98550724637684" y="137.94642857142856"/>
+        </scene>
+        <!--Entry Details-->
+        <scene sceneID="VN4-Wq-x6Z">
+            <objects>
+                <viewController id="alV-gT-KDK" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y0o-72-SMY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="aNi-Gy-kiN">
+                                <rect key="frame" x="20" y="160" width="374" height="358.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Ttile" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="22n-mZ-rUS">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="37"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="sBb-8X-aEH">
+                                        <rect key="frame" x="0.0" y="52" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😊"/>
+                                            <segment title="😐"/>
+                                            <segment title="🙁"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="985-2c-Qtz">
+                                        <rect key="frame" x="0.0" y="98" width="374" height="260.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgM-Kx-YMe">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p3R-gT-hfj">
+                                                <rect key="frame" x="0.0" y="28.5" width="374" height="2"/>
+                                                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="JiG-DY-RT1"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aAb-pB-2Gc">
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="222"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="aNi-Gy-kiN" firstAttribute="leading" secondItem="EYL-b3-fkY" secondAttribute="leading" constant="20" id="a54-u4-Yp5"/>
+                            <constraint firstItem="EYL-b3-fkY" firstAttribute="trailing" secondItem="aNi-Gy-kiN" secondAttribute="trailing" constant="20" id="nof-vr-RgN"/>
+                            <constraint firstItem="aNi-Gy-kiN" firstAttribute="top" secondItem="EYL-b3-fkY" secondAttribute="top" constant="20" id="pIz-OD-fyd"/>
+                            <constraint firstItem="aNi-Gy-kiN" firstAttribute="height" secondItem="Y0o-72-SMY" secondAttribute="height" multiplier="0.4" id="wKy-Dy-VnM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="EYL-b3-fkY"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="B5o-R8-YUX"/>
+                    <connections>
+                        <outlet property="bodyTextView" destination="aAb-pB-2Gc" id="9z4-s3-6BY"/>
+                        <outlet property="moodControl" destination="sBb-8X-aEH" id="cd6-MA-4gc"/>
+                        <outlet property="titleTextField" destination="22n-mZ-rUS" id="QLZ-ow-fHj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nXb-M9-T2A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="674" y="545"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0ah-bg-nQg">
@@ -191,7 +273,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0TL-Uf-tUu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="577" y="138"/>
+            <point key="canvasLocation" x="645" y="-204"/>
         </scene>
     </scenes>
     <resources>
