safety save before fixing constraint issues

--- a/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                         <constraints>
                             <constraint firstItem="6Jl-h6-dvp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="GKj-ZE-TeS"/>
                             <constraint firstItem="6Jl-h6-dvp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MaU-UT-vLo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6Jl-h6-dvp" secondAttribute="bottom" constant="435" id="NCG-08-46I"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6Jl-h6-dvp" secondAttribute="bottom" constant="435" id="OiQ-SZ-Cto"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Jl-h6-dvp" secondAttribute="trailing" constant="20" id="UdY-p7-Z26"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -99,11 +99,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="140" id="Wxj-F8-uni" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="140"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="100" id="Wxj-F8-uni" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wxj-F8-uni" id="QpA-jI-Nb9">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="AoE-Ge-MSj">
@@ -112,7 +112,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="AON-DJ-wz4">
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="48"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="The Adventure of the Three Students" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LR8-Fy-iM1">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Adventure of the Three Students" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LR8-Fy-iM1">
                                                             <rect key="frame" x="0.0" y="0.0" width="254.5" height="48"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                             <nil key="textColor"/>
@@ -126,7 +126,7 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Blah blah this happened to me today, blah blah, code stuff, blah blah, more code stuff, blah blah, the end!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drk-Yu-j5K">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Blah blah this happened to me today, blah blah, code stuff, blah blah, more code stuff, blah blah, the end!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drk-Yu-j5K">
                                                     <rect key="frame" x="0.0" y="52" width="374" height="61"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -136,9 +136,9 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="AoE-Ge-MSj" firstAttribute="top" secondItem="QpA-jI-Nb9" secondAttribute="topMargin" id="2hs-EP-waY"/>
-                                        <constraint firstAttribute="trailing" secondItem="AoE-Ge-MSj" secondAttribute="trailing" constant="20" id="4gO-Du-qHa"/>
-                                        <constraint firstItem="AoE-Ge-MSj" firstAttribute="leading" secondItem="QpA-jI-Nb9" secondAttribute="leading" constant="20" id="Zl1-Ju-Eti"/>
+                                        <constraint firstItem="AoE-Ge-MSj" firstAttribute="trailing" secondItem="QpA-jI-Nb9" secondAttribute="trailingMargin" id="LWk-5X-xdv"/>
+                                        <constraint firstItem="AoE-Ge-MSj" firstAttribute="top" secondItem="QpA-jI-Nb9" secondAttribute="topMargin" id="T0V-Jx-Y7U"/>
+                                        <constraint firstItem="AoE-Ge-MSj" firstAttribute="leading" secondItem="QpA-jI-Nb9" secondAttribute="leadingMargin" id="mz4-dH-64j"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -154,7 +154,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Journal" id="nDh-UN-Wko">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="ALw-rD-8Iw">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ALw-rD-8Iw">
                             <connections>
                                 <segue destination="lBj-J5-s30" kind="presentation" modalPresentationStyle="fullScreen" id="Tr1-9z-j3v"/>
                             </connections>
@@ -163,7 +163,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nGQ-T2-W4E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="869.56521739130437" y="527.67857142857144"/>
+            <point key="canvasLocation" x="867" y="528"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6sb-Fq-IYN">
