--- a/CoreDataJournal/CoreDataJournal/Views/Base.lproj/Main.storyboard
+++ b/CoreDataJournal/CoreDataJournal/Views/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Create Entry-->
+        <!--Create Entry View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="CreateEntryViewController" customModule="CoreDataJournal" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,25 +19,34 @@
                                 <rect key="frame" x="20" y="70" width="373" height="272"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B2p-Us-WWT">
-                                        <rect key="frame" x="0.0" y="0.0" width="139" height="22"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="194" height="31.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="rBL-GL-lQS">
+                                        <rect key="frame" x="0.0" y="42.5" width="263" height="32"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <segments>
+                                            <segment title="Happy 😁"/>
+                                            <segment title="Sad 😢"/>
+                                            <segment title="Neutral 😐"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55o-fd-eMA">
-                                        <rect key="frame" x="0.0" y="33" width="41" height="11"/>
+                                        <rect key="frame" x="0.0" y="84.5" width="41" height="11"/>
                                         <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="11"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fd2-tX-yuo">
-                                        <rect key="frame" x="0.0" y="55" width="373" height="1"/>
+                                        <rect key="frame" x="0.0" y="106.5" width="373" height="1"/>
                                         <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="K1G-iF-haq"/>
                                         </constraints>
                                     </view>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lAN-zD-Kdu">
-                                        <rect key="frame" x="0.0" y="67" width="373" height="205"/>
+                                        <rect key="frame" x="0.0" y="118.5" width="373" height="153.5"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -59,7 +68,8 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Create Entry" id="jpX-TR-qi0">
+                    <navigationItem key="navigationItem" id="jpX-TR-qi0">
+                        <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="zq0-my-2PT">
                             <connections>
                                 <action selector="cancel:" destination="BYZ-38-t0r" id="hOk-J7-HiN"/>
@@ -74,6 +84,7 @@
                     <connections>
                         <outlet property="entryDetailTextField" destination="lAN-zD-Kdu" id="nhw-co-2dV"/>
                         <outlet property="entryTitleTextField" destination="B2p-Us-WWT" id="L4c-Ta-hB4"/>
+                        <outlet property="moodSegmentedControl" destination="rBL-GL-lQS" id="cC9-GJ-CfN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -89,48 +100,46 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="155" id="giT-ga-MV2" customClass="EntryTableViewCell" customModule="CoreDataJournal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="155"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="228" id="giT-ga-MV2" customClass="EntryTableViewCell" customModule="CoreDataJournal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="228"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="giT-ga-MV2" id="IuC-Sf-WMV">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="155"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="228"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="A6v-R6-Ujp">
-                                            <rect key="frame" x="20" y="11" width="52" height="47.5"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ut-dK-y4M">
-                                                    <rect key="frame" x="0.0" y="0.0" width="52" height="24"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gcM-RO-BVa">
-                                                    <rect key="frame" x="0.0" y="28" width="52" height="19.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F90-sc-IUT">
-                                            <rect key="frame" x="272.5" y="11" width="35.5" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zG-Hx-AKL">
+                                            <rect key="frame" x="20" y="43" width="42" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="poB-dN-joH">
+                                            <rect key="frame" x="20" y="11" width="52" height="24"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ho-WT-71W">
+                                            <rect key="frame" x="112" y="13.5" width="39.5" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="F90-sc-IUT" firstAttribute="top" secondItem="A6v-R6-Ujp" secondAttribute="top" id="CDQ-dw-LX7"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="F90-sc-IUT" secondAttribute="trailing" constant="86" id="I8h-Wg-yUo"/>
-                                        <constraint firstItem="F90-sc-IUT" firstAttribute="top" secondItem="IuC-Sf-WMV" secondAttribute="topMargin" id="ZJz-cB-Nvf"/>
-                                        <constraint firstItem="F90-sc-IUT" firstAttribute="leading" secondItem="8ut-dK-y4M" secondAttribute="trailing" constant="200" id="v7y-Vc-ZfP"/>
+                                        <constraint firstItem="poB-dN-joH" firstAttribute="top" secondItem="IuC-Sf-WMV" secondAttribute="topMargin" id="5qM-UK-omW"/>
+                                        <constraint firstItem="poB-dN-joH" firstAttribute="leading" secondItem="IuC-Sf-WMV" secondAttribute="leadingMargin" id="Irr-Pu-1LU"/>
+                                        <constraint firstAttribute="bottom" secondItem="0zG-Hx-AKL" secondAttribute="bottom" constant="164.5" id="PQJ-zc-rdf"/>
+                                        <constraint firstItem="5ho-WT-71W" firstAttribute="leading" secondItem="poB-dN-joH" secondAttribute="trailing" constant="40" id="bus-GH-6eP"/>
+                                        <constraint firstItem="0zG-Hx-AKL" firstAttribute="leading" secondItem="IuC-Sf-WMV" secondAttribute="leadingMargin" id="d83-w8-R3m"/>
+                                        <constraint firstItem="0zG-Hx-AKL" firstAttribute="top" secondItem="poB-dN-joH" secondAttribute="bottom" constant="8" id="iPb-dE-EW5"/>
+                                        <constraint firstItem="5ho-WT-71W" firstAttribute="centerY" secondItem="poB-dN-joH" secondAttribute="centerY" id="jQc-ox-hjT"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="dateLabel" destination="F90-sc-IUT" id="bxz-sv-rAK"/>
-                                    <outlet property="entryDetailLabel" destination="gcM-RO-BVa" id="VFj-7P-s7l"/>
-                                    <outlet property="entryTitleLabel" destination="8ut-dK-y4M" id="aOe-93-kbp"/>
+                                    <outlet property="dateLabel" destination="0zG-Hx-AKL" id="XzW-KR-rbO"/>
+                                    <outlet property="entryDetailLabel" destination="5ho-WT-71W" id="3aX-lQ-BqE"/>
+                                    <outlet property="entryTitleLabel" destination="poB-dN-joH" id="lwV-4l-xoQ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
